--- a/directions/index.html
+++ b/directions/index.html
@@ -17,29 +17,29 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            September 17, 2021 <br> Vietnamese PhD Students in Austria
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Seminar Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the Seminar" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Seminar Program" href="program">Program</a> 
             </td>
             <td class="navigation">
                 <a class="current" title="Directions to the Conference" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Seminar Schedule" href="schedule">Schedule</a>
             </td>
         </tr>
     </table>
@@ -63,8 +63,8 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Mike Pierce</a></td> 
-            <td class="footer">&copy; Conference Organizers</td> 
+            <td class="footer">Vietnamese Students in Austria<a target="_blank" href="#">PhD Talk</a></td> 
+            <td class="footer">&copy; We tell our PhD Stories</td> 
         </tr>
     </table>
 
