--- a/index.html
+++ b/index.html
@@ -9,52 +9,52 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Conference Template</title>
+    <title>Seminar Template</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" alt="Seminar Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            September 17, 2021 <br> Vietnamese PhD Students in Austria
         </div>
     </div>
 
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Conference Home Page" href=".">Home</a>
+                <a class="current" title="Seminar Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Register for the Seminar" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Seminar Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Directions to the Seminar" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Seminar Schedule" href="schedule">Schedule</a>
             </td>
         </tr>
     </table>
 
     <h2>What is This Website?</h2>
     <p>
-        This website is a template that you could use for a (small) academic conference. 
+        This website is a template that you could use for a (small) academic Seminar. 
         It&rsquo;s got a page for registration, where you can embed a Google Form or some other way for participants to register.
-        It&rsquo;s got a program page to list the schedule for the conference.
-        It&rsquo;s got a directions page to add a bunch of instructions how to get to the conference.
+        It&rsquo;s got a program page to list the schedule for the Seminar.
+        It&rsquo;s got a directions page to add a bunch of instructions how to get to the Seminar.
         It&rsquo;s got a page to put up the flyers and other promotional materials for folks to download.
     </p>
     <p>
         You can use this template by cloning all the files from this
-        <a target="_blank" href="https://github.com/mikepierce/conference-website-template">GitHub repo here</a>.
+        <a target="_blank" href="https://github.com/mikepierce/Seminar-website-template">GitHub repo here</a>.
         This template was created from a website I made for 
         <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>,
         in case you want to see an example of this template being used in the wild.
@@ -66,10 +66,10 @@
 
     <h2>Organizers</h2>
     <p>
-        Here&rsquo;s a good place to list the organizers and sponsors of the conference,
+        Here&rsquo;s a good place to list the organizers and sponsors of the Seminar,
         as well as list contact information for the organizers,
         and show off the logos of the sponsors.
-        It looks like his conference was sponsored by kittens!
+        It looks like his Seminar was sponsored by kittens!
     </p>
     <table class="sponsors">
         <tr>
@@ -94,7 +94,7 @@
     <table class="footer">
         <tr>
             <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Mike Pierce</a></td> 
-            <td class="footer">&copy; Conference Organizers</td> 
+            <td class="footer">&copy; Seminar Organizers</td> 
         </tr>
     </table>
 
