--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </tr>
     </table>
 
-    <h2>What is This Website?</h2>
+    <h2>What is PhD Talk?</h2>
     <p>
         This website is a template that you could use for a (small) academic Seminar. 
         It&rsquo;s got a page for registration, where you can embed a Google Form or some other way for participants to register.
