--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Mike Pierce</a></td> 
-            <td class="footer">&copy; Seminar Organizers</td> 
+            <td class="footer">PhD Talk<a target="_blank" href="#">@ 2021</a></td> 
+            <td class="footer">&copy; We tell our PhD Stories</td>  
         </tr>
     </table>
 
