--- a/directions/index.html
+++ b/directions/index.html
@@ -62,8 +62,8 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">Vietnamese Students in Austria<a target="_blank" href="#">PhD Talk</a></td> 
-            <td class="footer">&copy; We tell our PhD Stories</td> 
+            <td class="footer">PhD<a target="_blank" href="#">Talk</a></td> 
+            <td class="footer">&copy; 2021 - We tell our PhD Stories</td> 
         </tr>
     </table>
 
