--- a/registration/index.html
+++ b/registration/index.html
@@ -60,8 +60,8 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Mike Pierce</a></td> 
-            <td class="footer">&copy; Conference Organizers</td> 
+            <td class="footer">PhD<a target="_blank" href="#">Talk</a></td> 
+            <td class="footer">&copy; 2021 - We tell our PhD Stories</td>   
         </tr>
     </table>
 
