--- a/schedule/index.html
+++ b/schedule/index.html
@@ -20,8 +20,7 @@
             <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
-        </div>
+         </div>
     </div>
 
     <table class="navigation">
@@ -70,8 +69,8 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">Design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Mike Pierce</a></td> 
-            <td class="footer">&copy; Conference Organizers</td> 
+            <td class="footer">PhD<a target="_blank" href="#">Talk</a></td> 
+            <td class="footer">&copy; 2021 - We tell our PhD Stories</td>   
         </tr>
     </table>
 
