--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">PhD Talk<a target="_blank" href="#">@ 2021</a></td> 
-            <td class="footer">&copy; We tell our PhD Stories</td>  
+            <td class="footer">PhD<a target="_blank" href="#">Talk</a></td> 
+            <td class="footer">&copy; 2021 - We tell our PhD Stories</td>  
         </tr>
     </table>
 
