--- a/schedule/index.html
+++ b/schedule/index.html
@@ -2,22 +2,22 @@
 <html lang='en'>
 
 <head>
-    <base href="..">
+    <base href=".">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <meta name="description" content="Conference Template">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Flyer | Conference Template</title>
+    <title>Seminar Template</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" alt="Seminar Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
         </div>
         <div class="bottom-right">
          </div>
@@ -26,19 +26,16 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a class="current" title="Seminar Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Seminar Schedule" href="schedule">Schedule</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Register for the Seminar" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a class="current" title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Our Community" href="community">Our Community</a>
             </td>
         </tr>
     </table>
