--- a/community/index.html
+++ b/community/index.html
@@ -2,20 +2,20 @@
 <html lang='en'>
 
 <head>
-    <base href=".">
+    <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <meta name="description" content="Conference Template">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Seminar Template</title>
+    <title>Directions | Conference Template</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Seminar Template Banner">
+        <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
             <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
         </div>
@@ -26,16 +26,19 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Seminar Home Page" href=".">Home</a>
-            </td>
-            <td class="navigation">
-                <a title="Seminar Schedule" href="schedule">Schedule</a>
+                <a title="Seminar Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
                 <a title="Register for the Seminar" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Our Community" href="community">Our Community</a>
+                <a title="Seminar Program" href="program">Program</a> 
+            </td>
+            <td class="navigation">
+                <a class="current" title="Directions to the Conference" href="directions">Directions</a>
+            </td>
+            <td class="navigation">
+                <a title="Seminar Schedule" href="schedule">Schedule</a>
             </td>
         </tr>
     </table>
