--- a/index.html
+++ b/index.html
@@ -29,16 +29,13 @@
                 <a class="current" title="Seminar Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
+                <a title="Seminar Schedule" href="schedule">Schedule</a>
+            </td>
+            <td class="navigation">
                 <a title="Register for the Seminar" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Seminar Program" href="program">Program</a> 
-            </td>
-            <td class="navigation">
-                <a title="Directions to the Seminar" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Seminar Schedule" href="schedule">Schedule</a>
+                <a title="Our Community" href="community">Our Community</a>
             </td>
         </tr>
     </table>
