--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Seminar Home Page" href=".">Home</a>
+                <a class="current" title="Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
                 <a title="Register for the Seminar" href="registration">Registration</a>
@@ -35,10 +35,7 @@
                 <a title="Seminar Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Seminar" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Seminar Schedule" href="schedule">Schedule</a>
+                <a title="Upcoming Events" href="schedule">Upcoming Events</a>
             </td>
         </tr>
     </table>
