--- a/community/index.html
+++ b/community/index.html
@@ -5,17 +5,17 @@
     <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Seminar Template">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
-    <meta name="KeyWords" content="Conference">
-    <title>Directions | Conference Template</title>
+    <meta name="KeyWords" content="Seminar">
+    <title>Directions | Seminar Template</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" alt="Seminar Template Banner">
         <div class="top-left">
             <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
         </div>
@@ -26,7 +26,7 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Seminar Home Page" href=".">Home</a>
+                <a title="Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
                 <a title="Register for the Seminar" href="registration">Registration</a>
@@ -35,10 +35,7 @@
                 <a title="Seminar Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a class="current" title="Directions to the Conference" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Seminar Schedule" href="schedule">Schedule</a>
+                <a title="Upcoming Events" href="schedule">Upcoming Events</a>
             </td>
         </tr>
     </table>
@@ -46,13 +43,13 @@
 
     <h2>Directions</h2>
     <p>
-        Here&rsquo;s where you can put directions to the conference,
+        Here&rsquo;s where you can put directions to the Seminar,
         and other information that will help attendees find the location,
         and find the building, and register, and find local places they can stay, etc.
         You can embed a <a href="https://www.google.com/maps">Google Maps</a> iframe
-        with directions to the conference like a did below.
+        with directions to the Seminar like a did below.
         It can also be helpful to include maps of the campus itself,
-        or pictures of the building the conference will be held in.
+        or pictures of the building the Seminar will be held in.
         I&rsquo;ve opted to use a placeholder image of a kitten below.
     </p>
 
