--- a/registration/index.html
+++ b/registration/index.html
@@ -5,19 +5,19 @@
     <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Seminar Template">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
-    <meta name="KeyWords" content="Conference">
-    <title>Registration | Conference Template</title>
+    <meta name="KeyWords" content="Seminar">
+    <title>Registration | Seminar Template</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/banner.jpg" alt="Seminar Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Seminar</span><span class="title2">Template</span> <span class="year">2525</span>
         </div>
         <div class="bottom-right">
          </div>
@@ -26,19 +26,16 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a title="Conference Home Page" href=".">Home</a>
+                <a title="Seminar Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a class="current" title="Register for the Conference" href="registration">Registration</a>
+                <a class="current" title="Register for the Seminar" href="registration">Registration</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Seminar Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Upcoming Events" href="schedule">Upcoming Events</a>
             </td>
         </tr>
     </table>
@@ -46,8 +43,8 @@
     <br>
 
     <p>
-        Here&rsquo;s where you provide instructions how to register for your conference.
-        We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
+        Here&rsquo;s where you provide instructions how to register for your Seminar.
+        We used a <a href="https://docs.google.com/forms/d/1IuEmOhtKhZrpKiY4oiNAtk65wxQ020XH-Gm_ogErB5c/viewform">Google Form</a> 
         and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
     </p>
     <!--
@@ -60,7 +57,7 @@
 
     <table class="footer">
         <tr>
-            <td class="footer">PhD<a target="_blank" href="#">Talk</a></td> 
+            <td class="footer">PhD <a target="_blank" href="#">Talk</a></td> 
             <td class="footer">&copy; 2021 - We tell our PhD Stories</td>   
         </tr>
     </table>
