--- a/registration/index.html
+++ b/registration/index.html
@@ -47,9 +47,9 @@
         We used a <a href="https://docs.google.com/forms/d/1IuEmOhtKhZrpKiY4oiNAtk65wxQ020XH-Gm_ogErB5c/viewform">Google Form</a> 
         and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
     </p>
-    <!--
-    <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
-    -->
+
+    <iframe class="registration" src="https://docs.google.com/forms/d/e/1FAIpQLSeFzha3mvKILnJIZYRON8wbuckGimGq8c9wif2PD-u4A5OiXQ/viewform?embedded=true"></iframe>
+
     <p>
         Here&rsquo;s another paragraph of filler text:
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
