--- a/registration/index.html
+++ b/registration/index.html
@@ -17,7 +17,7 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Seminar Template Banner">
         <div class="top-left">
-            <span class="title1">Seminar</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
         </div>
         <div class="bottom-right">
          </div>
