--- a/registration/index.html
+++ b/registration/index.html
@@ -43,9 +43,7 @@
     <br>
 
     <p>
-        Here&rsquo;s where you provide instructions how to register for your Seminar.
-        We used a <a href="https://docs.google.com/forms/d/1IuEmOhtKhZrpKiY4oiNAtk65wxQ020XH-Gm_ogErB5c/viewform">Google Form</a> 
-        and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
+        PhD Talk cordially invite you to register for our seminar for Vietnamese scholars in Austria. Colleagues who want to contribute as a speaker, please select the registration section for the speaker, we will contact you directly via email.        
     </p>
 
     <iframe class="registration"  src="https://docs.google.com/forms/d/e/1FAIpQLSeFzha3mvKILnJIZYRON8wbuckGimGq8c9wif2PD-u4A5OiXQ/viewform?embedded=true"  height="100%" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
