--- a/registration/index.html
+++ b/registration/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Seminar Template Banner">
+        <img src="assets/banner.jpg" width="1000" alt="Seminar Template Banner">
         <div class="top-left">
             <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
         </div>
