--- a/registration/index.html
+++ b/registration/index.html
@@ -46,7 +46,7 @@
         PhD Talk cordially invite you to register for our seminar for Vietnamese scholars in Austria. Colleagues who want to contribute as a speaker, please select the registration section for the speaker, we will contact you directly via email.        
     </p>
 
-    <iframe class="registration"  src="https://docs.google.com/forms/d/e/1FAIpQLSeFzha3mvKILnJIZYRON8wbuckGimGq8c9wif2PD-u4A5OiXQ/viewform?embedded=true"  weight = "1000" height="4000" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Đang tải…</iframe>
+    <iframe class="registration"  src="https://docs.google.com/forms/d/e/1FAIpQLSeFzha3mvKILnJIZYRON8wbuckGimGq8c9wif2PD-u4A5OiXQ/viewform?embedded=true"   height="100%" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Đang tải…</iframe>
 
 
     <table class="footer">
