--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@
 
     <h2>Organizers</h2>
     <p>
-        Here&rsquo;s a good place to list the organizers and sponsors of the Seminar,
-        as well as list contact information for the organizers,
-        and show off the logos of the sponsors.
-        It looks like his Seminar was sponsored by kittens!
+        We are Vietnamese scholars in Austria. Our aim is to make an interdisciplinary network among Vietnamese scholars around Europe to share experience and collaborate in scientific research.
+        We are looking for sponsors for our activities. Please contact us via email phdtalk.eu@gmail.com if you want to become a sponsorship.
     </p>
     <table class="sponsors">
         <tr>
