--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
     <table class="sponsors">
         <tr>
             <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten1.jpg" alt="First Sponsor Name">
+                <a href="#">
+                    <img src="" alt="First Sponsor Name">
                 </a>
             </td>
             <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten2.jpg" alt="Second Sponsor Name" style="width: 80%">
+                <a href="">
+                    <img src="" alt="Second Sponsor Name" style="width: 80%">
                 </a>
             </td>
             <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten3.jpg" alt="Third Sponsor Name">
+                <a href="">
+                    <img src="" alt="Third Sponsor Name">
                 </a>
             </td>
         </tr>
