--- a/schedule/index.html
+++ b/schedule/index.html
@@ -52,8 +52,8 @@
     <table class="flyers">
         <tr>
             <td class="flyer">
-                <a href="assets/MathConnections-Flyer.pdf">
-                    <img src="assets/MathConnections-Flyer.png" alt="MathConnections Color Flyer" style="width:100%">
+                <a href="assets/PhD Talk 1.pdf">
+                    <img src="assets/PhD Talk 1.png" alt="RNA Sequencing in Plant Biology" style="width:100%">
                 </a>
             </td>
             <td class="flyer">
