--- a/index.html
+++ b/index.html
@@ -65,26 +65,27 @@
         We are Vietnamese scholars in Austria. Our aim is to make an interdisciplinary network among Vietnamese scholars around Europe to share experience and collaborate in scientific research.
         We are looking for sponsors for our activities. Please contact us via email phdtalk.eu@gmail.com if you want to become a sponsorship.
     </p>
+<!--
     <table class="sponsors">
         <tr>
             <td class="sponsor">
                 <a href="#">
-                    <img src="" alt="First Sponsor Name">
+                    <img src="#" alt="First Sponsor Name">
                 </a>
             </td>
             <td class="sponsor">
                 <a href="">
-                    <img src="" alt="Second Sponsor Name" style="width: 80%">
+                    <img src="#" alt="Second Sponsor Name" style="width: 80%">
                 </a>
             </td>
             <td class="sponsor">
                 <a href="">
-                    <img src="" alt="Third Sponsor Name">
+                    <img src="#" alt="Third Sponsor Name">
                 </a>
             </td>
         </tr>
     </table>
-
+-->
     <table class="footer">
         <tr>
             <td class="footer">PhD<a target="_blank" href="#">Talk</a></td> 
