--- a/index.html
+++ b/index.html
@@ -42,22 +42,13 @@
 
     <h2>What is PhD Talk?</h2>
     <p>
-        This website is a template that you could use for a (small) academic Seminar. 
-        It&rsquo;s got a page for registration, where you can embed a Google Form or some other way for participants to register.
-        It&rsquo;s got a program page to list the schedule for the Seminar.
-        It&rsquo;s got a directions page to add a bunch of instructions how to get to the Seminar.
-        It&rsquo;s got a page to put up the flyers and other promotional materials for folks to download.
+        PhD Talk is a seminar series for Vietnamese scholars in Austria and Europe as well. We would like to build an active forum for researchers, where scholars from various fields are able to connect and collaborate in future scientific projects. The trend of interdisciplinary science has been emerging in recent years, therefore, PhD Talk opens for the topic from different fields.
     </p>
     <p>
-        You can use this template by cloning all the files from this
-        <a target="_blank" href="https://github.com/mikepierce/Seminar-website-template">GitHub repo here</a>.
-        This template was created from a website I made for 
-        <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>,
-        in case you want to see an example of this template being used in the wild.
+        PhD Talk will be organized every month in the hybrid format. Participants can join together in some area and connect all together via Zoom. The format for each episode includes 2 sections. The first section is a “My Talk” from a speaker who will present his/her topic in an understandable way for people from other disciplines. The second section is a “Discussion” where we will discuss applications of those techniques in different fields of science, how to apply and collaborate in a whole project. Our speakers are researchers who are working in Austria as well as researchers over the globe.
     </p>
     <p>
-        This paragraph is just some filler text to give the homepage some volume:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
+        We believe this is a potential opportunity for scholars to build networks and develop collaborative projects to do cutting-edge research in the future..
     </p>
 
     <h2>Organizers</h2>
