--- a/index.html
+++ b/index.html
@@ -41,21 +41,13 @@
     </table>
 
     <h2>What is PhD Talk?</h2>
-    <p>
-        
-        PhD Talk is an seminar series for Vietnamese scholars in Austria and Europe as well. 
-        We would like to build a active forum for researcher, where scholars from various fields are able to connect and collaborate in future scientific projects. 
-        The trend of inter-  and multi- disciplinary science has been emerging in recent years, therefore, PhD Talk opens for the topic from different fields.
+    <p> 
+        PhD Talk is a seminar series for Vietnamese scholars in Austria and Europe as well. We would like to build an active forum for researchers, where scholars from various fields are able to connect and collaborate in future scientific projects. The trend of interdisciplinary science has been emerging in recent years, therefore, PhD Talk opens for the topic from different fields.
     </p>
     <p>
-        PhD Talk will be organized every month in the hybrid format. 
-        Participants can join together in some area and connect all together via Zoom. 
-        The format for each episode includes 2 sections. 
-        The first section is a “My Talk” from a speaker who will presenting his/her topic as the understandable way for people from other disciplines. The second section is a “Discussion” where we will discuss applications of those techniques in different fields of science, how to apply and collaborate in a whole project.
-    </p>
+        PhD Talk will be organized every month in the hybrid format. Participants can join together in some area and connect all together via Zoom. The format for each episode includes 2 sections. The first section is a “My Talk” from a speaker who will present his/her topic in an understandable way for people from other disciplines. The second section is a “Discussion” where we will discuss applications of those techniques in different fields of science, how to apply and collaborate in a whole project. Our speakers are researchers who are working in Austria as well as researchers over the globe.    </p>
     <p>
-        We believe this a potential opportunity for scholars to build networks and develop collaborative projects to do cutting-edge research in the future. 
-    </p>
+        We believe this is a potential opportunity for scholars to build networks and develop collaborative projects to do cutting-edge research in the future.    </p>
 
     <h2>Organizers</h2>
     <p>
