--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2>Organizers</h2>
     <p>
         We are Vietnamese scholars in Austria. Our aim is to make an interdisciplinary network among Vietnamese scholars around Europe to share experience and collaborate in scientific research.
-        We are looking for sponsors for our activities. Please contact us via email phdtalk.eu@gmail.com if you want to become a sponsorship.
+        We are looking for sponsors for our activities. Please contact us via email <a href = "mailto: phdtalk.eu@gmail.com">phdtalk.eu@gmail.com</a> if you want to become a sponsorship.
     </p>
 <!--
     <table class="sponsors">
