--- a/program/index.html
+++ b/program/index.html
@@ -48,10 +48,11 @@
     <table>
         <tr>
             <td class="date" rowspan="2">
-                8:30am
+                September 17th, 2021 - 18:00 - 20:00 GMT+1
             </td>
             <td class="title-special">
-                Registration and Coffee &amp; Tea!
+                Topic: RNA Sequencing in Plant Biology &amp;
+                Presenter: Vu Nguyen - GMI, Vienna BioCenter.
             </td>
         </tr>
         <tr>
@@ -62,18 +63,18 @@
         </tr>
     </table>
 
-    <table id="PUTSPEAKERNAMEHERE">
+    <table id="Vu Nguyen">
         <tr>
-            <td class="date" rowspan="3">
-                9:00am
+            <td class="September 17th, 2021" rowspan="3">
+                18:00 - 20:00 GMT+1
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                RNA Sequencing in Plant Biology 
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Vu Nguyen (GMI, Vienna BioCenter)
             </td>
         </tr>
         <tr>
@@ -83,18 +84,18 @@
         </tr>
     </table>
 
-    <table id="PUTSPEAKERNAMEHERE">
+    <table id="Vy Nguyen">
         <tr>
             <td class="date" rowspan="3">
                 9:25am
             </td>
             <td class="title">
-                Interesting Title of a Talk 
+                Annotation Cell Subset 
             </td>
         </tr>
         <tr>
             <td class="speaker">
-                Speaker Name (University)
+                Vy Nguyen (Medical University of Vienna)
             </td>
         </tr>
         <tr>
@@ -103,7 +104,7 @@
             </td>
         </tr>
     </table>
-
+<!--
     <table id="PUTSPEAKERNAMEHERE">
         <tr>
             <td class="date" rowspan="3">
@@ -157,10 +158,10 @@
         </tr>
         <tr>
             <td class="abstract">
-                <!-- Kept for Spacing -->
+                <!-- Kept for Spacing --><!--
             </td>
         </tr>
-    </table>
+    </table> 
 
     <table class="plenary">
         <tr>
@@ -195,7 +196,7 @@
         </tr>
         <tr>
             <td class="abstract">
-                <!-- Kept for Spacing -->
+                <!-- Kept for Spacing --><!--
             </td>
         </tr>
     </table>
@@ -253,7 +254,8 @@
         </tr>
         <tr>
             <td class="abstract">
-                <!-- Kept for Spacing -->
+-->
+                <!-- Kept for Spacing --><!--
             </td>
         </tr>
     </table>
@@ -326,7 +328,8 @@
             <td class="footer">PhD<a target="_blank" href="#">Talk</a></td> 
             <td class="footer">&copy; 2021 - We tell our PhD Stories</td>  
         </tr>
-    </table>
+    </table> 
+-->
 
 </body>
 
