--- a/program/index.html
+++ b/program/index.html
@@ -48,25 +48,23 @@
     <table>
         <tr>
             <td class="date" rowspan="2">
-                September 17th, 2021 - 18:00 - 20:00 GMT+1
+                Season 1. 2021-2022
             </td>
             <td class="title-special">
-                Topic: RNA Sequencing in Plant Biology &amp;
-                Presenter: Vu Nguyen - GMI, Vienna BioCenter.
+                We Tell Our PhD Stories.
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                Here&rsquo;s a section in the program that isn&rsquo;t a talk. 
-                Notice that the title is styled differently than the ones for talks.
+
             </td>
         </tr>
     </table>
 
     <table id="Vu Nguyen">
         <tr>
-            <td class="September 17th, 2021" rowspan="3">
-                18:00 - 20:00 GMT+1
+            <td class="date" rowspan="3">
+                17/08/2021
             </td>
             <td class="title">
                 RNA Sequencing in Plant Biology 
