--- a/program/index.html
+++ b/program/index.html
@@ -48,7 +48,7 @@
     <table>
         <tr>
             <td class="date" rowspan="2">
-                Season 1. 2021-2022
+                SEASON 1
             </td>
             <td class="title-special">
                 We Tell Our PhD Stories.
