--- a/program/index.html
+++ b/program/index.html
@@ -47,7 +47,7 @@
 
     <table>
         <tr>
-            <td class="title-special" rowspan="2">
+            <td class="title" rowspan="1">
                 SEASON 1
             </td>
             <td class="title-special">
