--- a/schedule/index.html
+++ b/schedule/index.html
@@ -43,10 +43,8 @@
     <br>
 
     <p>
-        I got lazy on this page and didn&rsquo;t mock up any template flyers for this template website.
-        So these are the flyers that <a target="_blank" href="https://math.jonathanalcaraz.com/">Jonathan Alcaraz</a>
-        designed for <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>.
-        Click on the color or grayscale flyer below to download a pdf.
+        Please follow this topic to update the Upcoming Events of PhD Talk.
+        Click on the flyer to looking for more details.
     </p>
 
     <table class="flyers">
