--- a/program/index.html
+++ b/program/index.html
@@ -47,8 +47,8 @@
 
     <table>
         <tr>
-            <td class="title-3" rowspan="1">
-                SEASON 1
+            <td class="date" rowspan="1">
+                <b color = "red">SEASON 1</b>
             </td>
             <td class="title-special">
                 We Tell Our PhD Stories.
