--- a/community/index.html
+++ b/community/index.html
@@ -41,17 +41,9 @@
     </table>
 
 
-    <h2>Directions</h2>
+    <h2>Vietnamese Scholars in Austria</h2>
     <p>
-        Here&rsquo;s where you can put directions to the Seminar,
-        and other information that will help attendees find the location,
-        and find the building, and register, and find local places they can stay, etc.
-        You can embed a <a href="https://www.google.com/maps">Google Maps</a> iframe
-        with directions to the Seminar like a did below.
-        It can also be helpful to include maps of the campus itself,
-        or pictures of the building the Seminar will be held in.
-        I&rsquo;ve opted to use a placeholder image of a kitten below.
-    </p>
+        Here is the list of Vietnamese Scholars in Austria. If you want to make a connection with them, please contact them directly. If you don't know how to contact them, you can email phdtalk.eu@gmail.com. We will forward the email to your target scholar.    </p>
 
     <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d134998.56138929052!2d-121.98776790326531!3d37.869213445646146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808ff431db2f96d1%3A0x8b99d90a20aa67de!2sMt+Diablo!5e0!3m2!1sen!2sus!4v1561787340910!5m2!1sen!2sus"></iframe>
 
