--- a/schedule/index.html
+++ b/schedule/index.html
@@ -37,6 +37,9 @@
             <td class="navigation">
                 <a class="current" title="Upcoming Events" href="schedule">Upcoming Events</a>
             </td>
+            <td class="navigation">
+                <a title="Our Community" href="community">Our Community</a>
+            </td>
         </tr>
     </table>
 
