--- a/program/index.html
+++ b/program/index.html
@@ -40,6 +40,9 @@
             <td class="navigation">
                 <a title="Upcoming Events" href="schedule">Upcoming Events</a>
             </td>
+            <td class="navigation">
+                <a title="Our Community" href="community">Our Community</a>
+            </td>
         </tr>
     </table>
 
