--- a/community/index.html
+++ b/community/index.html
@@ -35,10 +35,10 @@
                 <a title="Seminar Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Upcoming Events" href="schedule">Upcoming Events</a>
+                <a title="Upcoming Events" href="schedule">Events</a>
             </td>
-            <td class="navigation>
-                <a class="current" title="Our Community" href="community">Our Community</a>
+            <td class="navigation">
+                <a class="current" title="Community" href="community">Community</a> 
             </td>
         </tr>
     </table>
@@ -48,9 +48,9 @@
     <p>
         Here is the list of Vietnamese Scholars in Austria. If you want to make a connection with them, please contact them directly. If you don't know how to contact them, you can email phdtalk.eu@gmail.com. We will forward the email to your target scholar.    </p>
 
-    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d134998.56138929052!2d-121.98776790326531!3d37.869213445646146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808ff431db2f96d1%3A0x8b99d90a20aa67de!2sMt+Diablo!5e0!3m2!1sen!2sus!4v1561787340910!5m2!1sen!2sus"></iframe>
+    <iframe class="directions" src="https://www.google.at/maps/dir//Vienna+BioCenter+%E2%80%93+Wissenschaftliche+Standortgemeinschaft,+Campus-Vienna-Biocenter+1,+1030+Wien/@48.189245,16.4004933,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x476d07592c033617:0x98ca58fdd12e7bb8!2m2!1d16.402682!2d48.189245?hl=en"></iframe>
 
-    <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">
+   <!-- <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">-->
 
     <table class="footer">
         <tr>
