--- a/schedule/index.html
+++ b/schedule/index.html
@@ -35,10 +35,10 @@
                 <a title="Seminar Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a class="current" title="Upcoming Events" href="schedule">Upcoming Events</a>
+                <a class="current" title="Upcoming Events" href="schedule">Events</a>
             </td>
             <td class="navigation">
-                <a title="Our Community" href="community">Our Community</a>
+                <a title="Our Community" href="community">Community</a>
             </td>
         </tr>
     </table>
