--- a/community/index.html
+++ b/community/index.html
@@ -48,7 +48,7 @@
     <p>
         Here is the list of Vietnamese Scholars in Austria. If you want to make a connection with them, please contact them directly. If you don't know how to contact them, you can email phdtalk.eu@gmail.com. We will forward the email to your target scholar.    </p>
 
-    <iframe class="directions" src="https://www.google.at/maps/dir//Vienna+BioCenter+%E2%80%93+Wissenschaftliche+Standortgemeinschaft,+Campus-Vienna-Biocenter+1,+1030+Wien/@48.189245,16.4004933,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x476d07592c033617:0x98ca58fdd12e7bb8!2m2!1d16.402682!2d48.189245?hl=en"></iframe>
+    <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2659.901724051181!2d16.400493315852046!3d48.18924497922747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d07592c033617%3A0x98ca58fdd12e7bb8!2sVienna%20BioCenter%20%E2%80%93%20Wissenschaftliche%20Standortgemeinschaft!5e0!3m2!1sde!2sat!4v1630096322280!5m2!1sde!2sat"></iframe>
 
    <!-- <img class="center" src="assets/kitten4.jpg" alt="This is just a kitten right now" id="kitten">-->
 
