--- a/program/index.html
+++ b/program/index.html
@@ -38,10 +38,10 @@
                 <a class="current" title="Seminar Program" href="program">Program</a> 
             </td>
             <td class="navigation">
-                <a title="Upcoming Events" href="schedule">Upcoming Events</a>
+                <a title="Upcoming Events" href="schedule">Events</a>
             </td>
             <td class="navigation">
-                <a title="Our Community" href="community">Our Community</a>
+                <a title="Our Community" href="community">Community</a>
             </td>
         </tr>
     </table>
