--- a/program/index.html
+++ b/program/index.html
@@ -70,7 +70,7 @@
                 17/08/2021
             </td>
             <td class="title">
-                RNA Sequencing in Plant Biology 
+                How plant stem cells control jumping genes 
             </td>
         </tr>
         <tr>
