--- a/program/index.html
+++ b/program/index.html
@@ -91,7 +91,7 @@
                 29/10/2021
             </td>
             <td class="title">
-                Annotation Cell Subset 
+                An harmonious combination of biology and informatics: single-cell RNA-sequencing data analysis. 
             </td>
         </tr>
         <tr>
@@ -101,8 +101,12 @@
         </tr>
         <tr>
             <td class="abstract">
-                <!--Filler text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-                --> </td>
+                <p>Sequencing technology is an interdisciplinary breakthrough that influences many research areas, from biological, medical research to biomedical and bioinformatics research. Among all sequencing technologies, single-cell RNA-sequencing (scRNA-seq) has become a key tool for biomedical research, because it allows one to reveal the biological processes, the interactions and the heterogeneity within tissues at an unprecedented level of detail, the level of cells. To reach that goal, scRNA-seq data analysis, which is mostly done in bioinformatics research, forms the crucial intermediate steps in consuming the scRNA-seq output and extracting biologically meaningful results. 
+                </p>
+                <p>
+                For that reason, scRNA-seq data analysis is the main point of our next gathering and will be further described by Thi-Tuong-Vy Nguyen, a PhD student in Medical University of Vienna. Having a background in pure IT and just got to know bioinformatics in her PhD study, Vy will guide you from a very basic start (and with the point of view of a biology-nerd). It might also be interesting that you will see how IT can support other research areas, particularly biology.
+                </p>
+            </td>
         </tr>
     </table>
 <!--
