--- a/schedule/index.html
+++ b/schedule/index.html
@@ -58,8 +58,8 @@
                 </a>
             </td>
             <td class="flyer">
-                <a href="assets/MathConnections-FlyerBW.pdf">
-                    <img src="assets/MathConnections-FlyerBW.png" alt="MathConnections BW Flyer" style="width:100%">
+                <a href="assets/PhD Talk w.pdf">
+                    <img src="assets/PhD Talk 2.png" alt="MathConnections BW Flyer" style="width:100%">
                 </a>
             </td>
         </tr>
