--- a/schedule/index.html
+++ b/schedule/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" width="1000" alt="Seminar Template Banner">
+        <img src="assets/banner.jpg" height="400" alt="Seminar Template Banner">
         <div class="top-left">
             <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
         </div>
@@ -58,8 +58,8 @@
                 </a>
             </td>
             <td class="flyer">
-                <a href="assets/PhD Talk w.pdf">
-                    <img src="assets/PhD Talk 2.png" alt="MathConnections BW Flyer" style="width:100%">
+                <a href="assets/PhD Talk 2.pdf">
+                    <img src="assets/PhD Talk 2.png" alt="RNAseq" style="width:100%">
                 </a>
             </td>
         </tr>
