--- a/program/index.html
+++ b/program/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" width="1000" alt="Seminar Template Banner">
+        <img src="assets/banner.jpg" height="400" alt="Seminar Template Banner">
         <div class="top-left">
             <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
         </div>
@@ -80,8 +80,8 @@
         </tr>
         <tr>
             <td class="abstract">
-                <!--Here&rsquo;s where you put the abstract of the talk. Notice that with MathJax you can include mathematical notation in the abstract like \(f(x)=3x-7\) or like \(h^0(X_t,\omega_{X_t}^{\otimes m})\) or whatever you want. Just notice the MathJax line in the head of this HTML document that allows this. I&rsquo;m going to blab just a tiny bit more in this abstract, but all the other abstracts below, except the ones for the plenary talks, will be just <i>Lorem Ipsum</i> text that needs to be replaced by real abstracts.
-                --> </td>
+                Jumping genes, or transposable elements (TEs), occupy a fraction in the animal and plant genomes. TEs can replicate and jump to genomic regions that can disrupt genes and cause genomic instability. How TEs are regulated in the cells is not well-understood. In my project, I use the Arabidopsis thaliana as a plant model to study the machinery which controls TE activation and transposition. I will show you that the plants have different mechanisms to regulate TEs and there is a reinforcing mechanism that control TEs in the plant stem cells, precursors of the germlines, preventing the jumping events pass to the next generation.
+            </td>
         </tr>
     </table>
 
