--- a/schedule/index.html
+++ b/schedule/index.html
@@ -14,10 +14,10 @@
 
 <body>
 
-    <div class="banner">
-        <img src="assets/banner.jpg" height="400" alt="Seminar Template Banner">
+       <div class="banner">
+        <img src="assets/banner.jpg" width = "1000" height = "400" alt="Seminar Template Banner">
         <div class="top-left">
-            <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year">2021</span>
+            <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year"></span>
         </div>
         <div class="bottom-right">
          </div>
