--- a/program/index.html
+++ b/program/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" width = "1000" height = "400" alt="Seminar Template Banner">
+        <img src="assets/banner.jpg" align="middle" width = "1000" height = "400" alt="Seminar Template Banner">
         <div class="top-left">
             <span class="title1">PhD</span><span class="title2">Talk</span> <span class="year"></span>
         </div>
